# efficient-spherical-harmonic-evaluation

./: .clang-format  CMakeLists.txt  ConstexprSHEval.hpp  ConstexprSHEvalTest.cpp  LICENSE.md  README.md  SHEvalCodeGen.cpp  SHEvalCodeGen.hpp  SHJCGT.cpp  SHJCGT.sln  SHJCGT.vcxproj  minimaltest.cpp  sheval.code-workspace  stdafx.cpp
codegen/: CMakeLists.txt
codegen/generated_original/: SHEval.cpp  SHEvalSSE.cpp
test/: CMakeLists.txt  ConstexprSHEvalTest.cpp  minimaltest.cpp
